unitsvc-facade/src/main/java/com/unitsvc/kit/facade/antlr4/inner/FilterExprParser.java
package com.unitsvc.kit.facade.antlr4.inner;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class FilterExprParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, BOOL=19, STRING=20, NUMBER=21, NULL=22, JavaScript=23, ID=24, 
		WS=25, AND=26, OR=27, EQ=28, NE=29, GTE=30, LTE=31, GT=32, LT=33, IN=34;
	public static final int
		RULE_query = 0, RULE_orExpression = 1, RULE_andExpression = 2, RULE_variable = 3, 
		RULE_array = 4, RULE_value = 5;
	private static String[] makeRuleNames() {
		return new String[] {
			"query", "orExpression", "andExpression", "variable", "array", "value"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'$'", "'$$'", "'like'", "'LIKE'", "'l_like'", "'L_LIKE'", 
			"'left_like'", "'LEFT_LIKE'", "'r_like'", "'R_LIKE'", "'right_like'", 
			"'RIGHT_LIKE'", "'['", "','", "']'", "'eval'", null, null, null, "'null'", 
			null, null, null, "'&&'", "'||'", "'=='", "'!='", "'>='", "'<='", "'>'", 
			"'<'", "'@'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "BOOL", "STRING", "NUMBER", 
			"NULL", "JavaScript", "ID", "WS", "AND", "OR", "EQ", "NE", "GTE", "LTE", 
			"GT", "LT", "IN"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FilterExpr.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FilterExprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QueryContext extends ParserRuleContext {
		public OrExpressionContext orExpression() {
			return getRuleContext(OrExpressionContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).exitQuery(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FilterExprVisitor ) return ((FilterExprVisitor<? extends T>)visitor).visitQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_query);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(12);
			orExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OrExpressionContext extends ParserRuleContext {
		public List<AndExpressionContext> andExpression() {
			return getRuleContexts(AndExpressionContext.class);
		}
		public AndExpressionContext andExpression(int i) {
			return getRuleContext(AndExpressionContext.class,i);
		}
		public List<TerminalNode> OR() { return getTokens(FilterExprParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(FilterExprParser.OR, i);
		}
		public OrExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_orExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).enterOrExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).exitOrExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FilterExprVisitor ) return ((FilterExprVisitor<? extends T>)visitor).visitOrExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OrExpressionContext orExpression() throws RecognitionException {
		OrExpressionContext _localctx = new OrExpressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_orExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(14);
			andExpression();
			setState(19);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OR) {
				{
				{
				setState(15);
				match(OR);
				setState(16);
				andExpression();
				}
				}
				setState(21);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AndExpressionContext extends ParserRuleContext {
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(FilterExprParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(FilterExprParser.AND, i);
		}
		public AndExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_andExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).enterAndExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).exitAndExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FilterExprVisitor ) return ((FilterExprVisitor<? extends T>)visitor).visitAndExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AndExpressionContext andExpression() throws RecognitionException {
		AndExpressionContext _localctx = new AndExpressionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_andExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(22);
			variable();
			setState(27);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND) {
				{
				{
				setState(23);
				match(AND);
				setState(24);
				variable();
				}
				}
				setState(29);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableContext extends ParserRuleContext {
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
	 
		public VariableContext() { }
		public void copyFrom(VariableContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class EmptyArrayVarConditionContext extends VariableContext {
		public TerminalNode ID() { return getToken(FilterExprParser.ID, 0); }
		public TerminalNode IN() { return getToken(FilterExprParser.IN, 0); }
		public EmptyArrayVarConditionContext(VariableContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).enterEmptyArrayVarCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).exitEmptyArrayVarCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FilterExprVisitor ) return ((FilterExprVisitor<? extends T>)visitor).visitEmptyArrayVarCondition(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class EmptyValueVarLikeLeftConditionContext extends VariableContext {
		public Token op;
		public TerminalNode ID() { return getToken(FilterExprParser.ID, 0); }
		public EmptyValueVarLikeLeftConditionContext(VariableContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).enterEmptyValueVarLikeLeftCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).exitEmptyValueVarLikeLeftCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FilterExprVisitor ) return ((FilterExprVisitor<? extends T>)visitor).visitEmptyValueVarLikeLeftCondition(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class VariableParentsContext extends VariableContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public VariableParentsContext(VariableContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).enterVariableParents(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).exitVariableParents(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FilterExprVisitor ) return ((FilterExprVisitor<? extends T>)visitor).visitVariableParents(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ValueConditionContext extends VariableContext {
		public Token op;
		public TerminalNode ID() { return getToken(FilterExprParser.ID, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode EQ() { return getToken(FilterExprParser.EQ, 0); }
		public TerminalNode NE() { return getToken(FilterExprParser.NE, 0); }
		public TerminalNode GTE() { return getToken(FilterExprParser.GTE, 0); }
		public TerminalNode LTE() { return getToken(FilterExprParser.LTE, 0); }
		public TerminalNode GT() { return getToken(FilterExprParser.GT, 0); }
		public TerminalNode LT() { return getToken(FilterExprParser.LT, 0); }
		public ValueConditionContext(VariableContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).enterValueCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).exitValueCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FilterExprVisitor ) return ((FilterExprVisitor<? extends T>)visitor).visitValueCondition(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ValueLikeConditionContext extends VariableContext {
		public Token op;
		public TerminalNode ID() { return getToken(FilterExprParser.ID, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public ValueLikeConditionContext(VariableContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).enterValueLikeCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).exitValueLikeCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FilterExprVisitor ) return ((FilterExprVisitor<? extends T>)visitor).visitValueLikeCondition(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class EmptyValueVarLikeConditionContext extends VariableContext {
		public Token op;
		public TerminalNode ID() { return getToken(FilterExprParser.ID, 0); }
		public EmptyValueVarLikeConditionContext(VariableContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).enterEmptyValueVarLikeCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).exitEmptyValueVarLikeCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FilterExprVisitor ) return ((FilterExprVisitor<? extends T>)visitor).visitEmptyValueVarLikeCondition(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class EmptyValueLikeConditionContext extends VariableContext {
		public Token op;
		public TerminalNode ID() { return getToken(FilterExprParser.ID, 0); }
		public EmptyValueLikeConditionContext(VariableContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).enterEmptyValueLikeCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).exitEmptyValueLikeCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FilterExprVisitor ) return ((FilterExprVisitor<? extends T>)visitor).visitEmptyValueLikeCondition(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class EmptyValueVarConditionContext extends VariableContext {
		public Token op;
		public TerminalNode ID() { return getToken(FilterExprParser.ID, 0); }
		public TerminalNode EQ() { return getToken(FilterExprParser.EQ, 0); }
		public TerminalNode NE() { return getToken(FilterExprParser.NE, 0); }
		public TerminalNode GTE() { return getToken(FilterExprParser.GTE, 0); }
		public TerminalNode LTE() { return getToken(FilterExprParser.LTE, 0); }
		public TerminalNode GT() { return getToken(FilterExprParser.GT, 0); }
		public TerminalNode LT() { return getToken(FilterExprParser.LT, 0); }
		public EmptyValueVarConditionContext(VariableContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).enterEmptyValueVarCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).exitEmptyValueVarCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FilterExprVisitor ) return ((FilterExprVisitor<? extends T>)visitor).visitEmptyValueVarCondition(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ArrayVarConditionContext extends VariableContext {
		public List<TerminalNode> ID() { return getTokens(FilterExprParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(FilterExprParser.ID, i);
		}
		public TerminalNode IN() { return getToken(FilterExprParser.IN, 0); }
		public ArrayVarConditionContext(VariableContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).enterArrayVarCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).exitArrayVarCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FilterExprVisitor ) return ((FilterExprVisitor<? extends T>)visitor).visitArrayVarCondition(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ValueLikeLeftConditionContext extends VariableContext {
		public Token op;
		public TerminalNode ID() { return getToken(FilterExprParser.ID, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public ValueLikeLeftConditionContext(VariableContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).enterValueLikeLeftCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).exitValueLikeLeftCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FilterExprVisitor ) return ((FilterExprVisitor<? extends T>)visitor).visitValueLikeLeftCondition(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class EmptyValueLikeLeftConditionContext extends VariableContext {
		public Token op;
		public TerminalNode ID() { return getToken(FilterExprParser.ID, 0); }
		public EmptyValueLikeLeftConditionContext(VariableContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).enterEmptyValueLikeLeftCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).exitEmptyValueLikeLeftCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FilterExprVisitor ) return ((FilterExprVisitor<? extends T>)visitor).visitEmptyValueLikeLeftCondition(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ValueVarConditionContext extends VariableContext {
		public Token op;
		public List<TerminalNode> ID() { return getTokens(FilterExprParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(FilterExprParser.ID, i);
		}
		public TerminalNode EQ() { return getToken(FilterExprParser.EQ, 0); }
		public TerminalNode NE() { return getToken(FilterExprParser.NE, 0); }
		public TerminalNode GTE() { return getToken(FilterExprParser.GTE, 0); }
		public TerminalNode LTE() { return getToken(FilterExprParser.LTE, 0); }
		public TerminalNode GT() { return getToken(FilterExprParser.GT, 0); }
		public TerminalNode LT() { return getToken(FilterExprParser.LT, 0); }
		public ValueVarConditionContext(VariableContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).enterValueVarCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).exitValueVarCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FilterExprVisitor ) return ((FilterExprVisitor<? extends T>)visitor).visitValueVarCondition(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ArrayConditionContext extends VariableContext {
		public TerminalNode ID() { return getToken(FilterExprParser.ID, 0); }
		public TerminalNode IN() { return getToken(FilterExprParser.IN, 0); }
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public ArrayConditionContext(VariableContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).enterArrayCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).exitArrayCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FilterExprVisitor ) return ((FilterExprVisitor<? extends T>)visitor).visitArrayCondition(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ValueVarLikeConditionContext extends VariableContext {
		public Token op;
		public List<TerminalNode> ID() { return getTokens(FilterExprParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(FilterExprParser.ID, i);
		}
		public ValueVarLikeConditionContext(VariableContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).enterValueVarLikeCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).exitValueVarLikeCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FilterExprVisitor ) return ((FilterExprVisitor<? extends T>)visitor).visitValueVarLikeCondition(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ValueLikeRightConditionContext extends VariableContext {
		public Token op;
		public TerminalNode ID() { return getToken(FilterExprParser.ID, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public ValueLikeRightConditionContext(VariableContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).enterValueLikeRightCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).exitValueLikeRightCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FilterExprVisitor ) return ((FilterExprVisitor<? extends T>)visitor).visitValueLikeRightCondition(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class EmptyValueLikeRightConditionContext extends VariableContext {
		public Token op;
		public TerminalNode ID() { return getToken(FilterExprParser.ID, 0); }
		public EmptyValueLikeRightConditionContext(VariableContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).enterEmptyValueLikeRightCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).exitEmptyValueLikeRightCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FilterExprVisitor ) return ((FilterExprVisitor<? extends T>)visitor).visitEmptyValueLikeRightCondition(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ValueVarLikeRightConditionContext extends VariableContext {
		public Token op;
		public List<TerminalNode> ID() { return getTokens(FilterExprParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(FilterExprParser.ID, i);
		}
		public ValueVarLikeRightConditionContext(VariableContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).enterValueVarLikeRightCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).exitValueVarLikeRightCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FilterExprVisitor ) return ((FilterExprVisitor<? extends T>)visitor).visitValueVarLikeRightCondition(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class EmptyValueVarLikeRightConditionContext extends VariableContext {
		public Token op;
		public TerminalNode ID() { return getToken(FilterExprParser.ID, 0); }
		public EmptyValueVarLikeRightConditionContext(VariableContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).enterEmptyValueVarLikeRightCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterExprListener ) ((FilterExprListener)listener).exitEmptyValueVarLikeRightCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FilterExprVisitor ) return ((FilterExprVisitor<? extends T>)visitor).visitEmptyValueVarLikeRightCondition(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class EmptyArrayConditionContext extends VariableContext {
		public TerminalNode ID() { return getToken(FilterExprParser.ID, 0); }
		public TerminalNode IN() { return getToken(FilterExprParser.IN, 0); }
